--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+    // aws s3
+//    implementation 'software.amazon.awssdk:s3:2.20.40'
+//    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.262'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
