--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,16 @@
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "~18.0.8",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
