--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -24,6 +25,7 @@
     "buffer": "^6.0.3",
     "date-fns": "^4.1.0",
     "expo": "~52.0.26",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.8",
@@ -52,7 +54,8 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "victory-native": "^41.16.0"
+    "victory-native": "^41.16.0",
+    "expo-crypto": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
