--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-file-system": "~18.0.8",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
@@ -46,6 +47,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-modal-selector": "^2.1.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -54,8 +56,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "victory-native": "^41.16.0",
-    "expo-crypto": "~14.0.2"
+    "victory-native": "^41.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
